--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 nav {
-    background-color: #333;
+    background-color: rgb(51,25,75);
     color: white;
     padding: 10px 20px;
     display: flex;
@@ -19,7 +19,7 @@ nav {
 }
 
 .logo img {
-    height: 40px;
+    height: 120px;
 }
 
 .nav-links {
