--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,10 +4,10 @@
         <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Logo">
       </a>
       <ul class="nav-links">
-        <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/people' | relative_url }}">People</a></li>
-        <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
-        <li><a href="{{ '/publications' | relative_url }}">Publications</a></li>
+        <li><a href="{{ '/' | relative_url }}">HOME</a></li>
+        <li><a href="{{ '/people' | relative_url }}">PEOPLE</a></li>
+        <li><a href="{{ '/blog' | relative_url }}">BLOG</a></li>
+        <li><a href="{{ '/publications' | relative_url }}">PUBLICATIONS</a></li>
       </ul>
     </div>
   </nav>
