--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
         <li><a href="{{ '/' | relative_url }}">HOME</a></li>
         <li><a href="{{ '/people' | relative_url }}">PEOPLE</a></li>
         <li><a href="{{ '/blog' | relative_url }}">BLOG</a></li>
-        <li><a href="{{ '/publications' | relative_url }}">PUBLICATIONS</a></li>
+        <li><a href="https://scholar.google.com/citations?user=CMcsygMAAAAJ&hl=en" target="_blank">PUBLICATIONS</a></li>
       </ul>
     </div>
   </nav>
