--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,8 @@ main {
     background-color: white;
     padding: 30px 120px;
     font-size: 24px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .video-container {
