--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,11 +207,7 @@ main {
         margin-left: 0;
     }
     
-    main {
-        padding: 10px 20px;
-    }
-    
     .content-section {
-        padding: 30px 20px;
+        padding: 10px;
     }
 }
