--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,6 +3,11 @@
       <a href="/" class="logo">
         <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Logo">
       </a>
+      <button class="mobile-toggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       <ul class="nav-links">
         <li><a href="{{ '/' | relative_url }}">HOME</a></li>
         <li><a href="{{ '/people' | relative_url }}">PEOPLE</a></li>
