--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,5 +13,6 @@
         {{ content }}
     </main>
     {% include footer.html %}
+    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
 </body>
 </html>
