--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,10 +182,34 @@ main {
     max-width: 300px;
 }
 
+.mobile-toggle {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    width: 30px;
+    height: 24px;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+
+.mobile-toggle span {
+    display: block;
+    height: 3px;
+    width: 100%;
+    background-color: rgb(217,193,250);
+    border-radius: 3px;
+}
+
 /* Mobile Responsive Styles */
 @media screen and (max-width: 1200px) {
     nav {
         padding: 10px 20px;
+        position: relative;
     }
     
     .nav-container {
@@ -197,11 +221,21 @@ main {
         margin-bottom: 10px;
     }
     
+    .mobile-toggle {
+        display: flex;
+    }
+    
     .nav-links {
         margin-left: 0;
         flex-direction: column;
         width: 100%;
         align-items: center;
+        display: none;
+        margin-top: 10px;
+    }
+    
+    .nav-links.show {
+        display: flex;
     }
     
     .nav-links li {
