--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer" role="contentinfo">
   <div class="footer-content">
     <p>&copy; 2025 Tom Silver. All rights reserved.</p>
   </div>
