--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,17 +1,17 @@
-<nav>
+<nav aria-label="Main navigation">
     <div class="nav-container">
       <a href="/" class="logo">
-        <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Logo">
+        <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="PRPL - Princeton Robot Planning and Learning">
       </a>
-      <button class="mobile-toggle" aria-label="Toggle menu">
+      <button class="mobile-toggle" aria-label="Toggle menu" aria-expanded="false" aria-controls="nav-menu">
         <span></span>
         <span></span>
         <span></span>
       </button>
-      <ul class="nav-links">
-        <li><a href="{{ '/' | relative_url }}">HOME</a></li>
-        <li><a href="{{ '/people' | relative_url }}">PEOPLE</a></li>
-        <li><a href="https://scholar.google.com/citations?user=CMcsygMAAAAJ&hl=en" target="_blank">PUBLICATIONS</a></li>
+      <ul class="nav-links" id="nav-menu" role="menu">
+        <li role="none"><a href="{{ '/' | relative_url }}" role="menuitem">HOME</a></li>
+        <li role="none"><a href="{{ '/people' | relative_url }}" role="menuitem">PEOPLE</a></li>
+        <li role="none"><a href="https://scholar.google.com/citations?user=CMcsygMAAAAJ&hl=en" target="_blank" rel="noopener" role="menuitem">PUBLICATIONS</a></li>
       </ul>
     </div>
   </nav>
