--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,8 @@
         <li role="none"><a href="{{ '/' | relative_url }}" role="menuitem">HOME</a></li>
         <li role="none"><a href="{{ '/people' | relative_url }}" role="menuitem">PEOPLE</a></li>
         <li role="none"><a href="https://scholar.google.com/citations?user=CMcsygMAAAAJ&hl=en" target="_blank" rel="noopener" role="menuitem">PUBLICATIONS</a></li>
-        <li><a href="{{ '/papers-i-like' | relative_url }}">#PapersILike</a></li>
+        <li><a href="https://github.com/Princeton-Robot-Planning-and-Learning/">CODE</a></li>
+        <li><a href="https://bsky.app/hashtag/PaperILike?author=tomssilver.bsky.social">#PapersILike</a></li>
       </ul>
     </div>
   </nav>
